[package]
name = "ac7"
version = "0.1.0"
authors = ["Incomplete <incomplete@aixon.co>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.7.2"
uuid = { version = "0.7.4", features = ["serde", "v4"] }
clap = "2.33.0"
postgres = "0.15.2"
log = "0.4"
fern = "0.5"
chrono = "0.4.9"
