[package]
name = "ac7"
version = "0.1.0"
authors = ["Incomplete <incomplete@aixon.co>"]
edition = "2018"

[dependencies]
rand = "0.7.2"
uuid = { version = "0.7.4", features = ["serde", "v4"] }
clap = "2.33.0"
postgres = "0.15.2"
log = "0.4"
fern = "0.5"
chrono = "0.4.9"
ordered-map = "0.4.0"
ndarray = "0.13.0"
ndarray-linalg = "0.12.0"
ndarray-rand = "0.11.0"
ndarray-stats = "0.3.0"
